Fix main overflow

--- a/src/app/(home)/home.module.scss
+++ b/src/app/(home)/home.module.scss
@@ -10,9 +10,10 @@
   flex-grow: 1;
 
   overflow: hidden;
-
+  
   main {
     flex-grow: 1;
+    overflow: hidden;
     margin: 30px 50px 30px 0;
 
     @include GV.small-screen {
